Basically a working demo. This is almost enough to start looking at the electron changes- need to test resizing the client area to be the same as the actual caption button sizes AND need it to show proper skin w/ Windows 10.

--- a/BrowserWindowStyles/BrowserWindowStyles.vcxproj
+++ b/BrowserWindowStyles/BrowserWindowStyles.vcxproj
@@ -143,7 +143,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="caption_buttons.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="menu.cpp" />
+    <ClCompile Include="nca_hittest.cpp" />
+    <ClCompile Include="nca_mouse.cpp" />
+    <ClCompile Include="nca_paint.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="main.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
