--- a/BrowserWindowStyles/BrowserWindowStyles.vcxproj.filters
+++ b/BrowserWindowStyles/BrowserWindowStyles.vcxproj.filters
@@ -39,4 +39,7 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Manifest Include="BrowserWindowStyles.exe.manifest" />
+  </ItemGroup>
 </Project>
